--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Callbacks</title>
-</head>
+    <link rel="stylesheet" href="./styles/main.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
+      <div class="timer_container">
+        <span id="timer"> 0 </span>
+      </div>
 
-        <div class="timer_container">
-            <span id="timer"> 0 </span>
-        </div>
+      <div class="title">
+        Click <span id="target">0</span> times in 20 seconds
+      </div>
 
-        <div class="title">
-            Click <span id="target">0</span> times in 20 seconds
-        </div>
+      <div class="counter_container">
+        Counter:
+        <span id="counter"> 0 </span>
+      </div>
 
-        <div class="counter_container">
-            Counter:
-            <span id="counter"> 0 </span>
-        </div>
-
-        <button id="button1"> Start Game</button>
-        <button id="button2"> Restart</button>
-
+      <button id="button1">Start Game</button>
+      <button id="button2">Restart</button>
     </div>
-
-</body>
-
+  </body>
 </html>
-<script src="callbacks.js"></script>
+<script src="./scripts/callbacks.js"></script>
